# cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake_wrapper_x86.bat
apps/: CMakeLists.txt  main.cpp
cmake/: CopyCompileCommandsToRoot.cmake  FormatCompileCommands.cmake  NoInSourceBuilds.cmake
include/core/: public_foo.hpp
scripts/: cmake_wrapper_x64.bat
src/core/: CMakeLists.txt  foo.cpp
tests/: CMakeLists.txt
